--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "roland-xs84h",
   "version": "1.0.0",
 	"api_version": "1.0.0",
-	"keywords": [ "Roland" ],
+	"keywords": [ "Vision Mixer", "Matrix" ],
 	"manufacturer": "Roland",
 	"product": "XS-84H",
 	"shortname": "XS-84H",
