--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "roland-xs84h",
-  "version": "1.0.0",
-	"api_version": "1.0.0",
-	"keywords": [ "Vision Mixer", "Matrix" ],
-	"manufacturer": "Roland",
-	"product": "XS-84H",
-	"shortname": "XS-84H",
-	"description": "",
+  "version": "1.0.1",
+  "api_version": "1.0.0",
+  "keywords": [
+    "Vision Mixer",
+    "Matrix"
+  ],
+  "manufacturer": "Roland",
+  "product": "XS-84H",
+  "shortname": "XS-84H",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
