--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
 	"name": "roland-xs84h",
-	"version": "2.0.3",
-	"api_version": "1.0.0",
-	"keywords": [
-		"Vision Mixer",
-		"Matrix"
-	],
-	"manufacturer": "Roland",
-	"product": "XS-84H",
-	"shortname": "XS-84H",
-	"description": "",
-	"main": "src/index.js",
+	"version": "3.0.0",
+	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"format": "prettier --write ."
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/bitfocus/companion-module-roland-xs84h.git"
 	},
-	"author": "Joseph Adams <josephdadams@gmail.com>",
 	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/bitfocus/companion-module-roland-xs84h/issues"
+	"dependencies": {
+		"@companion-module/base": "^1.11.3"
 	},
-	"homepage": "https://github.com/bitfocus/companion-module-roland-xs84h#readme"
+	"devDependencies": {
+		"@companion-module/tools": "^2.1.1",
+		"prettier": "^3.4.2"
+	}
 }
